# Zeldy_MCU

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  adc_charactarization.c  adc_charactarization.h  component.mk  config_db.h  config_ssl.h  config_wifi.h  configure.md  esp_http_client_example.c  example_config_db.h  example_config_ssl.h  handler_https.c  handler_https.h  handler_wifi.c  handler_wifi.h  influxdb.c  influxdb.h  main.c
server/: docker-compose.yml  grafana-variables.env.dist  influxdb-variables.env.dist
src/: adc.c  post_data.c  post_data.h
